--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">QRGenerator</string>
-    <string name="save">Save</string>
-    <string name="generate">Generate</string>
-    <string name="enter_text">Enter Text</string>
+    <string name="app_name"></string>
+    <string name="generate">QR Code</string>
+    <string name="enter_text">Enter Destination </string>
     <string name="value_required">Value Required</string>
 </resources>
